--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,5 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 # RewriteRule . index.php [L]
 RewriteRule ^([a-zA-Z0-9/]*)$ index.php/$1
+
+SetEnvIf Authorization .+ HTTP_AUTHORIZATION=$0
